--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -41,7 +41,11 @@
   z-index: 1;
   top: 0;
   overflow-x: hidden;
-  padding-top: 15%;
+  padding-top: 7%;
   right: 0;
 
+}
+
+div.error {
+  font-size: 10px;
 }
